<resources>
    <string name="app_name">YF 博客</string>
    <string name="todo">TODO</string>
    <string name="title_statement_term">声明与条款</string>
    <string name="backup_title_home">Home</string>
    <string name="backup_title_dashboard">Dashboard</string>
    <string name="backup_title_notifications">Notifications</string>
    <string name="content_statement_term">
        欢迎使用 YF 博客，我们将严格遵守相关法律和隐私政策保护您的个人隐私，请您阅读并同意《用户协议》与《隐私政策》
    </string>
    <string name="title_home">主页</string>
    <string name="title_message_list">消息</string>
    <string name="title_mine">我的</string>
    <string name="title_agree_statement_term">同意并使用</string>
    <string name="title_disagree_statement_term">不同意</string>
    <string name="text_not_login">未登录</string>
    <string name="text_prompt_login">点击下方按钮登录</string>
    <string name="text_to_login">去登录</string>
    <string name="text_login">登录</string>
    <string name="prompt_not_implemented_feature">该功能暂未实现</string>
    <string name="text_modify_info">修改信息</string>
    <string name="title_avatar">头像</string>
    <string name="title_user_nickname">昵称</string>
    <string name="text_prompt_input_user_nickname">输入昵称</string>
    <string name="title_email">邮箱</string>
    <string name="text_prompt_input_email">输入邮箱</string>
    <string name="title_personal_signature">个性签名</string>
    <string name="text_prompt_input_personal_signature">输入个性签名</string>
    <string name="text_logout">退出登录</string>
    <string name="text_prompt_input_phone_number">输入手机号</string>
    <string name="text_code_text">获取验证码</string>
    <string name="text_prompt_code">输入验证码</string>
    <string name="text_login_by_password">密码登录</string>
    <integer name="statementPosStart">43</integer>
    <integer name="statementPosEnd">49</integer>
    <integer name="termPosStart">50</integer>
    <integer name="termPosEnd">56</integer>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>