<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoModifyActivity">

    <TextView
        android:id="@+id/text_title_bar"
        android:layout_width="96dp"
        android:layout_height="24dp"
        android:textSize="20sp"
        android:text="@string/text_modify_info"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:alpha="0.8"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_back"
        android:layout_marginTop="12dp"
        android:layout_marginStart="18dp"
        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/line_title_bar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white_80"
        android:layout_marginBottom="-12dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/bg_avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_light_gray_r8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintTop_toBottomOf="@+id/line_title_bar"
        app:layout_constraintBottom_toBottomOf="@+id/text_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_avatar"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:textSize="18sp"
        android:text="@string/title_avatar"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@+id/bg_avatar"
        app:layout_constraintStart_toStartOf="@+id/bg_avatar"
        />

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bg_circle_white"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@+id/bg_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/bg_avatar"
        app:layout_constraintEnd_toEndOf="@+id/bg_avatar"
        />

    <View
        android:id="@+id/bg_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_light_gray_r8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintTop_toBottomOf="@+id/bg_avatar"
        app:layout_constraintBottom_toBottomOf="@+id/text_personal_signature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_user_nickname"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:textSize="18sp"
        android:text="@string/title_user_nickname"
        android:textColor="@color/white"
        android:alpha="0.6"
        android:gravity="center_vertical"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:ellipsize="middle"
        app:layout_constraintTop_toTopOf="@+id/bg_info"
        app:layout_constraintBottom_toTopOf="@+id/text_user_email_content"
        app:layout_constraintStart_toStartOf="@+id/bg_info"
        app:layout_constraintEnd_toStartOf="@+id/editText_nickname"
        />

    <EditText
        android:id="@+id/editText_nickname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/bg_light_gray_r8dp"
        android:textSize="18sp"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/text_prompt_input_user_nickname"
        android:alpha="0.6"
        android:textColor="@color/white"
        android:gravity="center_vertical|end"
        android:textColorHint="@color/deep_white"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@+id/text_user_nickname"
        app:layout_constraintBottom_toBottomOf="@+id/text_user_nickname"
        app:layout_constraintStart_toEndOf="@+id/text_user_nickname"
        app:layout_constraintEnd_toEndOf="@+id/bg_info"
        />

    <TextView
        android:id="@+id/text_user_email_content"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:textSize="18sp"
        android:text="@string/title_email"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:alpha="0.6"
        app:layout_constraintTop_toBottomOf="@+id/text_user_nickname"
        app:layout_constraintBottom_toTopOf="@+id/text_personal_signature"
        app:layout_constraintStart_toStartOf="@+id/text_user_nickname"
        />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/bg_light_gray_r8dp"
        android:textSize="18sp"
        android:hint="@string/text_prompt_input_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:alpha="0.6"
        android:textColor="@color/white"
        android:gravity="center_vertical|end"
        android:textColorHint="@color/deep_white"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@+id/text_user_email_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_user_email_content"
        app:layout_constraintStart_toEndOf="@+id/text_user_email_content"
        app:layout_constraintEnd_toEndOf="@+id/bg_info"
        />

    <TextView
        android:id="@+id/text_personal_signature"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:textSize="18sp"
        android:text="@string/title_personal_signature"
        android:textColor="@color/white"
        android:alpha="0.6"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/text_user_email_content"
        app:layout_constraintStart_toStartOf="@+id/text_user_nickname"
        />

    <EditText
        android:id="@+id/editText_personal_signature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/bg_light_gray_r8dp"
        android:textSize="18sp"
        android:hint="@string/text_prompt_input_personal_signature"
        android:textColorHint="@color/deep_white"
        android:inputType="text"
        android:singleLine="true"
        android:alpha="0.6"
        android:textColor="@color/white"
        android:gravity="center_vertical|end"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@+id/text_personal_signature"
        app:layout_constraintBottom_toBottomOf="@+id/text_personal_signature"
        app:layout_constraintStart_toEndOf="@+id/text_personal_signature"
        app:layout_constraintEnd_toEndOf="@+id/bg_info"
        />

    <View
        android:id="@+id/btn_update_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_light_blue_r8dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintTop_toBottomOf="@+id/bg_info"
        app:layout_constraintBottom_toBottomOf="@+id/text_update_info"
        app:layout_constraintStart_toStartOf="@+id/bg_info"
        app:layout_constraintEnd_toEndOf="@+id/bg_info"
        />

    <TextView
        android:id="@+id/text_update_info"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:textSize="18sp"
        android:text="@string/text_modify_info"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@+id/btn_update_info"
        app:layout_constraintStart_toStartOf="@+id/btn_update_info"
        app:layout_constraintEnd_toEndOf="@+id/btn_update_info"
        />

    <View
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_pink_r8dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_info"
        app:layout_constraintBottom_toBottomOf="@+id/text_logout"
        app:layout_constraintStart_toStartOf="@+id/btn_update_info"
        app:layout_constraintEnd_toEndOf="@+id/btn_update_info"
        />

    <TextView
        android:id="@+id/text_logout"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:textSize="18sp"
        android:text="@string/text_logout"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@+id/btn_logout"
        app:layout_constraintStart_toStartOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="@+id/btn_logout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>