<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_light_gray_r8dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_circle_white"
            android:alpha="0.6"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_user_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/text_user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/text_not_login"
            android:textColor="@color/white"
            android:alpha="0.8"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/img_user_avatar"
            app:layout_constraintBottom_toTopOf="@+id/text_user_personal_signature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/text_user_personal_signature"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/text_prompt_login"
            android:textColor="@color/white"
            android:alpha="0.6"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/text_user_nickname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/btn_to_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_light_blue_r8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/bg_user"
        app:layout_constraintStart_toStartOf="@+id/bg_user"
        app:layout_constraintEnd_toEndOf="@+id/bg_user"
        >
    </View>

    <TextView
        android:id="@+id/text_to_login"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:text="@string/text_to_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/btn_to_login"
        app:layout_constraintBottom_toBottomOf="@+id/btn_to_login"
        app:layout_constraintStart_toStartOf="@+id/btn_to_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_to_login"
        />

    <View
        android:id="@+id/btn_to_send_article"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_pink_r8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_login"
        app:layout_constraintStart_toStartOf="@+id/btn_to_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_to_login"
        android:visibility="gone"
        >
    </View>

    <TextView
        android:id="@+id/text_to_send_article"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:text="发布文章"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/btn_to_send_article"
        app:layout_constraintBottom_toBottomOf="@+id/btn_to_send_article"
        app:layout_constraintStart_toStartOf="@+id/btn_to_send_article"
        app:layout_constraintEnd_toEndOf="@+id/btn_to_send_article"
        />

</androidx.constraintlayout.widget.ConstraintLayout>