<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginByCodeActivity">

    <TextView
        android:id="@+id/text_title_bar"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:textSize="20sp"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:alpha="0.8"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back"
        android:layout_marginTop="12dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/line_title_bar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:alpha="0.5"
        android:layout_marginBottom="-12dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/bg_phone_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_light_gray_r8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="-6dp"
        app:layout_constraintTop_toBottomOf="@+id/line_title_bar"
        app:layout_constraintBottom_toBottomOf="@+id/editText_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/editText_phone_number"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:autofillHints=""
        android:textSize="18sp"
        android:background="@drawable/bg_light_gray_r8dp"
        android:textColor="@color/white"
        android:alpha="0.6"
        android:gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="6dp"
        android:inputType="phone"
        android:hint="@string/text_prompt_input_phone_number"
        android:maxLength="11"
        android:textColorHint="@color/deep_white"
        app:layout_constraintTop_toTopOf="@+id/bg_phone_number"
        app:layout_constraintStart_toStartOf="@+id/bg_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/bg_phone_number"
        />

    <View
        android:id="@+id/bg_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_light_gray_r8dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="-6dp"
        app:layout_constraintTop_toBottomOf="@+id/bg_phone_number"
        app:layout_constraintBottom_toBottomOf="@+id/btn_code_get"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </View>

    <TextView
        android:id="@+id/btn_code_get"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:text="@string/text_code_text"
        android:textColor="@color/light_blue"
        android:alpha="0.8"
        android:textSize="18sp"
        android:gravity="center_vertical|end"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/bg_code"
        app:layout_constraintEnd_toEndOf="@+id/bg_code"
        />

    <EditText
        android:id="@+id/editText_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@color/light_gray"
        android:textColor="@color/white"
        android:alpha="0.6"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_prompt_code"
        android:inputType="number"
        android:maxLength="6"
        android:textColorHint="@color/deep_white"
        app:layout_constraintTop_toTopOf="@+id/btn_code_get"
        app:layout_constraintBottom_toBottomOf="@+id/btn_code_get"
        app:layout_constraintStart_toStartOf="@+id/bg_code"
        app:layout_constraintEnd_toStartOf="@+id/btn_code_get"
        />

    <View
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_deep_blue_r8dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="-12dp"
        app:layout_constraintTop_toBottomOf="@+id/bg_code"
        app:layout_constraintBottom_toBottomOf="@+id/text_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:alpha="0.6"
        android:text="@string/text_login"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        />

    <TextView
        android:id="@+id/btn_login_by_password"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:alpha="0.6"
        android:text="@string/text_login_by_password"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>