<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title_bar"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:textSize="20sp"
        android:text="主页"
        android:textColor="@color/white"
        android:alpha="0.8"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/ic_follower"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_follower"
        android:alpha="0.8"
        android:visibility="gone"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@+id/text_title_bar"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/line_title_bar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginBottom="-12dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bg_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_title_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_content">

        <View
            android:id="@+id/line_navigation_bar"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_home_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bg_message_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_home_page"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:alpha="0.8"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_home_page"
                app:layout_constraintBottom_toTopOf="@+id/text_home_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_home_page"
                android:layout_width="48dp"
                android:layout_height="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/title_home"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_home_page" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_message_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bg_mine"
            app:layout_constraintStart_toEndOf="@+id/bg_home_page"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_message_list"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:alpha="0.2"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_message_list"
                app:layout_constraintBottom_toTopOf="@+id/text_message_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_message_list"
                android:layout_width="48dp"
                android:layout_height="18dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:gravity="center"
                android:text="@string/title_message_list"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_message_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bg_message_list"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_mine"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:alpha="0.2"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_mine"
                app:layout_constraintBottom_toTopOf="@+id/text_mine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_mine"
                android:layout_width="48dp"
                android:layout_height="18dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:gravity="center"
                android:text="@string/title_mine"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_mine" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>